添加子项目和核心代码

--- a/ReportDesign/appsettings.Development.json
+++ b/ReportDesign/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "SqlSugarDB": [
+    {
+      "ConnId": "BaiZeRpt",
+      "ConnString": "xxxx",
+      "DbType": "Oracle"
+    }
+  ]
 }
