--- a/ReportDesign/ReportDesign.csproj
+++ b/ReportDesign/ReportDesign.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -8,6 +8,11 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Bi.Entity\Bi.Entity.csproj" />
+    <ProjectReference Include="..\Bi.Services\Bi.Services.csproj" />
   </ItemGroup>
 
 </Project>
