集成swagger成功，查询数据成功

--- a/ReportDesign/Properties/launchSettings.json
+++ b/ReportDesign/Properties/launchSettings.json
@@ -1,13 +1,10 @@
-﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
-
+{
   "profiles": {
     "ReportDesign": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "applicationUrl": "http://localhost:5161",
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:5076",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
