--- a/ReportDesign/appsettings.Development.json
+++ b/ReportDesign/appsettings.Development.json
@@ -5,10 +5,16 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Swagger": {
+    "Server": "http://localhost:8700",
+    "Enabled": true,
+    "DocNames": [ "ReportDesign" ],
+    "Description": "报表设计"
+  },
   "SqlSugarDB": [
     {
       "ConnId": "BaiZeRpt",
-      "ConnString": "xxxx",
+      "ConnString": "",
       "DbType": "Oracle"
     }
   ]
