--- a/Bi.Report/Properties/launchSettings.json
+++ b/Bi.Report/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": false,
-      "applicationUrl": "http://localhost:5076",
+      "applicationUrl": "http://192.168.43.215:8700",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
