--- a/Bi.Report/appsettings.Development.json
+++ b/Bi.Report/appsettings.Development.json
@@ -31,7 +31,7 @@
     {
       "ConnId": "bidb",
       "ConnString": "Server=192.168.1.25;DataBase=bireport;User ID=sa;Pwd=Passw0rd",
-      "DbType": "Oracle"
+      "DbType": "SqlServer"
     }
 
   ],
