权限模块已经完成

--- a/Bi.Report/Bi.Report.csproj
+++ b/Bi.Report/Bi.Report.csproj
@@ -38,4 +38,10 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="picture\coin.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
