--- a/Bi.Report/appsettings.Development.json
+++ b/Bi.Report/appsettings.Development.json
@@ -35,7 +35,7 @@
     }
 
   ],
-  "Administrators": [ "2542" ],
+  "Administrators": [ "admin" ],
   "AssetsOptions": [
     {
       "FileTypes": ".gif,.jpg,.jpeg,.png,.bmp",
