系统整合完毕，上线第一版

--- a/Bi.Report/appsettings.Development.json
+++ b/Bi.Report/appsettings.Development.json
@@ -27,7 +27,11 @@
     "ConnectionSelectionStrategy": "Random"
   },
   "SqlSugarDB": [
-    //JXBaiZeRpt
+    {
+      "ConnId": "oadb",
+      "ConnString": "Server=192.168.1.18;DataBase=ecology;User ID=sa;Pwd=hsd@1234",
+      "DbType": "SqlServer"
+    },
     {
       "ConnId": "bidb",
       "ConnString": "Server=192.168.1.25;DataBase=bireport;User ID=sa;Pwd=Passw0rd",
